(executable
 (name discover)
 (modules Discover)
 (libraries str dune-configurator))

(executable
 (name disc_delta_root)
 (modules disc_delta_root)
 (libraries str dune-configurator))

(rule
 (targets delta-path.cfg)
 (action
  (run ./disc_delta_root.exe %{project_root} %{workspace_root})))

(rule
 (targets
  pdflatex.cfg
  package-doc.cfg
  ;
  )
 (action
  (run
   ./discover.exe
   -doc-flags
   -all-flags
   -set-project-root
   %{project_root})))
