(env
 (_
  (flags
   (:standard -warn-error -20-26-27-8-14-33-39-52))))

(library
 (name BNF3)
 (public_name ostap.BNF3)
 (modules BNF3)
 (wrapped false))

(library
 (name src)
 (public_name ostap.src)
 (wrapped true)
 (libraries GT re.str BNF3)
 (modules
  Combinators
  Errors
  Matcher
  Msg
  Pretty
  PrioReorderer
  Reason
  Trap
  Types_))
