(env
 (_
  (flags
   (:standard -w -27-32 -warn-error -32))))

(executables
 (names
  test001
  test002
  test003
  test004
  test005
  test006
  test007
  test008
  test009
  test010
  test011
  test012
  test013
  test014
  test015
  ;test016
  ;test017
  ;test020
  ;
  )
 (modules
  test001
  test002
  test003
  test004
  test005
  test006
  test007
  test008
  test009
  test010
  test011
  test012
  test013
  test014
  test015
  ;test016
  ;test017
  ;test020
  ;
  )
 (public_names - - - - - - - - - - - - - - -)
 (libraries ostap)
 (preprocess
  (action
   (run %{project_root}/camlp5/pp5+ostap.exe %{input-file}))))

(cram
 (deps ./test001.exe))

(cram
 (deps ./test002.exe))

(cram
 (deps ./test003.exe))

(cram
 (deps ./test004.exe))

(cram
 (deps ./test005.exe))

(cram
 (deps ./test006.exe))

(cram
 (deps ./test007.exe))

(cram
 (deps ./test008.exe))

(cram
 (deps ./test009.exe))

(cram
 (deps ./test010.exe))

(cram
 (deps ./test011.exe))

(cram
 (deps ./test012.exe))

(cram
 (deps ./test013.exe))

(cram
 (deps ./test014.exe))

(cram
 (deps ./test015.exe))

; (cram
;  (deps ./test016.exe))

; (cram
;  (deps ./test017.exe))

; (cram
;  (deps ./test020.exe))
